Closed Bug 568375 Opened 16 years ago Closed 16 years ago

SpiderMonkey never generates JSOP_XMLOBJECT bytecode

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jimb, Assigned: jimb)

Details

(Whiteboard: [fixed-in-tracemonkey])

Attachments

(2 files)

SpiderMonkey supports, but never generates, the JSOP_XMLOBJECT bytecode. By inspection of the code, there doesn't seem to be anything that generates JSOP_XMLOBJECT, and the attached patch, which adds 'JS_ASSERT(0)' calls to each point in the code that processes JSOP_XMLOBJECT bytecodes, causes no regressions. The bytecode should be deleted.
See the comment atop jsopcode.tbl for how to "remove" an op -- thanks for catching this one. /be
Assignee: general → jim
Attachment #450252 - Flags: review?(jwalden+bmo)
Comment on attachment 450252 [details] [diff] [review] Delete the JSOP_XMLOBJECT bytecode. You also need to bump the bytecode version (see jsxdrapi.h, search for c0d3 I think), in case someone had ancient serialized code that used the opcode; r=me with that as well.
Attachment #450252 - Flags: review?(jwalden+bmo) → review+
Status: NEW → ASSIGNED
Whiteboard: [fixed-in-tracemonkey]
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: