Bug 568375: Delete the JSOP_XMLOBJECT bytecode. r=waldo